finalizing the changes

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "reactportofolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lkdgr8.github.io/my_portfolio",
   "dependencies": {
     "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -17,6 +18,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
